app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */
$navbar-default-bg: #f1f7f6;
$navbar-default-brand-hover-bg: #f9f9f7; 
@import "bootstrap";
body {
  margin-top: 70px;
  background-image: url(debut_light.png);
  background-repeat:repeat;
}

.photo-thumb {
  background: #f9f9f9;
  opacity: .9;
  box-shadow: 0px 0px 1px #fffce2;
}

.modal-dialog {
  width: 1100px;
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -320px;
  margin-left: -550px;
}

.modal-header {
  padding-bottom: 20px;
  padding-top: 5px;
}
.modal-body {
  padding: 0px;
  background-image: url(debut_light.png);
  background-repeat:repeat;
}

